syntax = "proto3";

package foo.bar;

import "mixer/v1/template/extensions.proto";
import "mixer/v1/template/standard_types.proto";

option (istio.mixer.v1.template.template_variety) = TEMPLATE_VARIETY_CHECK;


message Template {
    /*
    multi line comment
    multi line comment line 2
    */
    bool blacklist = 1;
    int64 fieldInt64 = 2;
    string fieldString = 3;
    double fieldDouble = 4;

    /*single line block comment*/
    istio.mixer.v1.template.Value val = 5;

    // single line comment
    map<string, istio.mixer.v1.template.Value> dimensions = 6;

    map<string, int64> dimensionsConstInt64Val = 7;
    map<string, string> dimensionsConstStringVal = 8;
    map<string, bool> dimensionsConstBoolVal = 9;
    map<string, double> dimensionsConstDoubleVal = 10;


    repeated Resource3 res3_list = 11;
    map<string, Resource3> res3_map = 12;
}

message Resource3 {
    /*
    multi line comment
    multi line comment line 2
    */
    bool blacklist = 1;
    int64 fieldInt64 = 2;
    string fieldString = 3;
    double fieldDouble = 4;

    /*single line block comment*/
    istio.mixer.v1.template.Value val = 5;

    // single line comment
    map<string, istio.mixer.v1.template.Value> dimensions = 6;

    map<string, int64> dimensionsConstInt64Val = 7;
    map<string, string> dimensionsConstStringVal = 8;
    map<string, bool> dimensionsConstBoolVal = 9;
    map<string, double> dimensionsConstDoubleVal = 10;

    repeated Resource3 res3_list = 11;
    map<string, Resource3> res3_map = 12;
}
